@startuml

title __VIEWHOLDER's Class Diagram__\n

  namespace com.mad.p03.np2020.routine {
    namespace ViewHolder {
      class com.mad.p03.np2020.routine.ViewHolder.CardViewHolder {
          + stepItem : CheckedTextView
          + CardViewHolder()
      }
    }
  }
  

  namespace com.mad.p03.np2020.routine {
    namespace ViewHolder {
      class com.mad.p03.np2020.routine.helpers.DividerItemDecoration {
          - space : int
          + DividerItemDecoration()
          + getItemOffsets()
      }
    }
  }
  

  namespace com.mad.p03.np2020.routine {
    namespace ViewHolder {
      class com.mad.p03.np2020.routine.ViewHolder.FocusViewHolder {
          + Task : TextView
          + date : TextView
          + duration : TextView
          + iconComplete : ImageView
          + parent : ViewGroup
          + FocusViewHolder()
          + onClick()
          + showAlertDialogButtonClicked()
      }
    }
  }
  

  namespace com.mad.p03.np2020.routine {
    namespace ViewHolder {
      class com.mad.p03.np2020.routine.ViewHolder.HabitGroupHolder {
          + grp_name : TextView
          + HabitGroupHolder()
      }
    }
  }
  

  namespace com.mad.p03.np2020.routine {
    namespace ViewHolder {
      class com.mad.p03.np2020.routine.ViewHolder.HabitHolder {
          + addBtn : ImageButton
          + habit_row : RelativeLayout
          + mCount : TextView
          + mCount2 : TextView
          + mOccurrence : TextView
          + mPeriod : TextView
          + mTitle : TextView
          + HabitHolder()
      }
    }
  }
  

  namespace com.mad.p03.np2020.routine {
    namespace ViewHolder {
      class com.mad.p03.np2020.routine.Home.Home.ViewHolder.MyHomeViewHolder {
          + mImgBackGround : ImageView
          + mTextViewListName : TextView
          + mimgIcon : ImageView
          {static} - TAG : String
          - mGestureDetector : GestureDetector
          - mTouchHelper : ItemTouchHelper
          + MyHomeViewHolder()
          + onDown()
          + onFling()
          + onLongPress()
          + onScroll()
          + onShowPress()
          + onSingleTapUp()
          + onTouch()
      }
    }
  }
  

  namespace com.mad.p03.np2020.routine {
    namespace ViewHolder {
      class com.mad.p03.np2020.routine.Task.ViewHolder.TaskViewHolder {
          + mCheckBox : CheckBox
          + mListName : TextView
          {static} - TAG : String
          - mGestureDetector : GestureDetector
          - mItemTouchHelper : ItemTouchHelper
          + TaskViewHolder()
          + onDown()
          + onFling()
          + onLongPress()
          + onScroll()
          + onShowPress()
          + onSingleTapUp()
          + onTouch()
      }
    }
  }
  

  com.mad.p03.np2020.routine.ViewHolder.CardViewHolder -up-|> androidx.recyclerview.widget.RecyclerView.ViewHolder
  com.mad.p03.np2020.routine.helpers.DividerItemDecoration -up-|> androidx.recyclerview.widget.RecyclerView.ItemDecoration
  com.mad.p03.np2020.routine.ViewHolder.FocusViewHolder .up.|> android.view.View.OnClickListener
  com.mad.p03.np2020.routine.ViewHolder.FocusViewHolder -up-|> androidx.recyclerview.widget.RecyclerView.ViewHolder
  com.mad.p03.np2020.routine.ViewHolder.FocusViewHolder o-- com.mad.p03.np2020.routine.Adapter.FocusAdapter : adapter
  com.mad.p03.np2020.routine.ViewHolder.HabitGroupHolder -up-|> androidx.recyclerview.widget.RecyclerView.ViewHolder
  com.mad.p03.np2020.routine.ViewHolder.HabitHolder -up-|> androidx.recyclerview.widget.RecyclerView.ViewHolder
  com.mad.p03.np2020.routine.Home.Home.ViewHolder.MyHomeViewHolder .up.|> android.view.GestureDetector.OnGestureListener
  com.mad.p03.np2020.routine.Home.Home.ViewHolder.MyHomeViewHolder .up.|> android.view.View.OnTouchListener
  com.mad.p03.np2020.routine.Home.Home.ViewHolder.MyHomeViewHolder -up-|> androidx.recyclerview.widget.RecyclerView.ViewHolder
  com.mad.p03.np2020.routine.Home.Home.ViewHolder.MyHomeViewHolder o-- com.mad.p03.np2020.routine.Home.Home.models.HomeItemTouchHelperAdapter : mHomeItemTouchHelperAdapter
  com.mad.p03.np2020.routine.Task.ViewHolder.TaskViewHolder .up.|> android.view.GestureDetector.OnGestureListener
  com.mad.p03.np2020.routine.Task.ViewHolder.TaskViewHolder .up.|> android.view.View.OnTouchListener
  com.mad.p03.np2020.routine.Task.ViewHolder.TaskViewHolder -up-|> androidx.recyclerview.widget.RecyclerView.ViewHolder
  com.mad.p03.np2020.routine.Task.ViewHolder.TaskViewHolder o-- com.mad.p03.np2020.routine.Task.model.TaskTouchHelperAdapter : mTaskTouchHelperAdapter


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
